$Id$

2007-02-06 Edwin Velds <e.velds@gmail.com>
	* Removed launch button in connect dialog.

2007-02-05 Edwin Velds <e.velds@gmail.com>
	* Revised the disasm viewer navigation and display code.
	* Fixed some label handling issues.
	* Changed interrupt flag display in register view to DI/EI.

2007-01-14 Edwin Velds <e.velds@gmail.com>
	* Added a menu for hiding/showing controls.
	* Added storing and restoring of window layout in the settings.

2007-01-13 Edwin Velds <e.velds@gmail.com>
	* New docking layout manager.
	    Supports:
	    - Dragging controls off the main window to a separate window.
	    - Docking separate windows back in the main window. Docking
	      occurs to the closest point on the closest edge. For
	      resizable windows, extra resized docking options are
	      available.
	    TODO:
	    - Finish support for multiple docking areas.
	    - Allow resizing of widgets in the docking area.
	    - Refine docking algorithm where needed.
	* Updated commands to use machine_info where appropriate

2006-10-09 Manuel Bilderbeek <manuel@msxnet.org>
	* Use new icon by Eric Boon also on Linux and Windows.
	  TODO: in Windows also make it an appIcon via Windows resources.

2006-10-05 Maarten ter Huurne <maarten@treewalker.org>
	* Use new icon by Eric Boon on OS X.

2006-09-30 Maarten ter Huurne <maarten@treewalker.org>
	* Committed mouse wheel scrolling support for disasm panel by BouKiCHi.
	* Corrected location of PkgInfo file (OS X).

2006-09-11 Edwin Velds <e.velds@gmail.com>
	* Added breakpoint addition dialog
	* Added preferences dialog
	* Added preferences for a few fonts
	* Added proper conversion for numeric inputs

2006-09-09 Edwin Velds <e.velds@gmail.com>
	* Symbol table rewrite
	* Added initial Settings class
	* Fixed widget colours

2006-08-06 Maarten ter Huurne <maarten@treewalker.org>
	* Implemented "make dist", which creates a source distribution tar.gz
	  archive in the directory "derived/dist".

2006-07-25 Edwin Velds <e.velds@gmail.com>