@@ -2,6 +2,8 @@ $Id$
 
 2007-02-06 Edwin Velds <e.velds@gmail.com>
 	* Removed launch button in connect dialog.
+	* Added signals to react to settings and symbol changes.
+	* Minor change in scrollbar handling of disasm view.
 
 2007-02-05 Edwin Velds <e.velds@gmail.com>
 	* Revised the disasm viewer navigation and display code.
